--- a/styles/common.css
+++ b/styles/common.css
@@ -28,31 +28,39 @@
     --pastel-red-button: #f08080;
     --pastel-red-button-text: #333;
     --pastel-red-button-border: #f08080;
+
     --green: #66bb6a;
     --green-hover: #388e3c;
+
     --purple: #a53fa5; 
     --purple-hover: #4f194f;
+
     --blue: #4f7dd9;
     --blue-hover: #2e5ba8;
+
     --red: #d9534f;
     --red-hover: #a63f3a;
+
     --orange: #ff8a65;
     --orange-hover: #e07d5f;
+
     --yellow: #fbc02d;
     --yellow-text: #000000;
     --yellow-hover: #d9a827;
+
     --github: #333333;
     --github-hover: #666666;
+    --github-text: #ffffff;
     --github-dark: #ffffff;
     --github-dark-hover: #cccccc;
     --github-dark-text: #333333;
     --github-dark-text-hover: #000000;
 
-
-
-    --gradient-bg-fallback: #8A2387;  /* fallback for old browsers */
+    --gradient-bg-fallback: #f4f4f4;  /* fallback for old browsers */
+    --gradient-bg-dark-fallback: #212121;  /* fallback for old browsers */
     --gradient-homepage-light-newer: linear-gradient(to right, #F27121, #E94057, #8A2387);
     --gradient-homepage-dark-newer: linear-gradient(to right, #000428, #004e92);
+    
 }
 
 body {
@@ -173,7 +181,7 @@ h3 {
     background-color: var(--home-button-hover);
 }
 
-/* add dark mode for home button */
+/* add dark mode for home buttona */
 body.dark-mode .home-button {
     background-color: var(--home-button-dark);
 }
