--- a/styles/exposure.css
+++ b/styles/exposure.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 input {
-    width: 20%;
+    width: 10%;
     padding: 10px;
     margin: 10px 0;
     border: 1px solid #8e388e;
